--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,8 @@
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	{% endblock %}
 
-	{% block extra_css  %}
+	{% block extra_css %}
+    {% endblock %}
 
 	{% block corejs %}
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -30,7 +31,7 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
 		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
 	</script>
-	{% endlock %}
+	{% endblock %}
 	{% block extra_js %}
 	{% endblock %}
 	<title>Boutique Ado {% block extra_title %}{% endblock %}</title>
